public static class AnimationKey
{
    public static string Is_Running = "isRunning";

    public static string Player_Is_Dodging = "isDodging";

    public static string Player_Light_Attack = "LightAttack";

    public static string Player_Heavy_Attack = "HeavyAttack";

    public static string Player_Dash_Strike = "DashStrike";
}
